syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message Score {
  int32 id = 1;
  int32 delegate_id = 2;
  int32 parameter_id = 3;
  double value = 4;
  string note = 5;
}